agregamos nueva informacion

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         Te kiero mucho omeee
     </article>
 </article>
-Toy aprendiendo
+Toy aprendiendo un poco de programation
 </article>
 </body>
 </html>
